# screamwire

./: Cargo.toml  Makefile  README.md
common/: Cargo.toml
common/src/: lib.rs  pw.rs  scream.rs  types.rs
common/tests/: header_tests.rs
contrib/systemd/: screamwire.service
receiver/: Cargo.toml
receiver/src/: cli.rs  main.rs  pw.rs
sender/: Cargo.toml
sender/src/: config.rs  main.rs  pw.rs  udp_sender.rs  vad.rs
src/: cli.rs  config.rs  main.rs  pw.rs  scream.rs  vad.rs
